--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <br />
                 <textarea id="information"
                   name="informations"
-                  placeholder="Что вашей душе угодно, излейте здесь всё"
+                  placeholder="Ваше сообщение"
                   required
                 ></textarea>
               </label>
